Feat: Add social links to footer

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,20 +6,28 @@
     <div class="row justify-content-center">
         <div class="col-md-7 text-center">
             <h1>Hello!&#128075;</h1>
-            <img src="{% static 'images/me.jpeg' %}" alt="">
-            <hr>
-            <p>I'm <strong>Kieran</strong></p>
+            <img src="{% static 'images/me.jpeg' %}" alt="" style="padding-bottom: 25px;">
+            <p class="display-6">I'm <strong>Kieran</strong></p>
             <p>A <strong>Full Stack Developer</strong> skilled in:</p>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>jQuery</li>
-                <li>Python</li>
-                <li>Django</li>
-                <li>Bootstrap</li>
-            </ul>
-            <p>Check out my projects <a href="#" class="links">here</a>!</p>
+            <div class="row">
+                <div class="col">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS/jQuery</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul>
+                        <li>Python</li>
+                        <li>Django</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <p>Check out my projects <a href="#" class="links">here</a>!</p>
+            </div>
         </div>
     </div>
 </div>
