--- a/templates/base.html
+++ b/templates/base.html
@@ -47,5 +47,14 @@
     </nav>
 {% block content %}
 {% endblock %}
+<footer class="text-center">
+    <hr>
+    <div class="row">
+        <div class="col">
+            <a href="https://github.com/klchambers"><i class="fa-brands fa-github display-3"></i></a>
+            <a href="https://www.linkedin.com/in/kieranchamberskc/"><i class="fa-brands fa-linkedin display-3"></i></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
