--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <title>Kieran Chambers | Full Stack Developer</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md bg-dark fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top">
         <div class="container-fluid">
             <div>
                 <h3 class="text-light">Kieran Chambers</h3>
