Feat: Add url links to about.html, projects.html and contact form to homepage

--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -2,5 +2,7 @@
 {% load static %}
 
 {% block content %}
-
+<div class="container page-content">
+    <h2>Want to get in touch?</h2>
+</div>
 {% endblock %}
