--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,7 +5,7 @@
 <div class="container page-content">
     <div class="row justify-content-center">
         <div class="col-md-7 text-center">
-            <h1>Hello!&#128075;</h1>
+            <p class="display-3">Hello!&#128075;</p>
             <img src="{% static 'images/me.jpeg' %}" alt="" style="padding-bottom: 25px;">
             <p class="display-6">I'm <strong>Kieran</strong></p>
             <p>A <strong>Full Stack Developer</strong> skilled in:</p>
