--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,11 +23,11 @@ a {
 }
 
 a:hover {
-    color: #ffa200 !important;
+    color: #cf87e9 !important;
 }
 
 .links {
-    color: #ffa200 !important;
+    color: #cf87e9 !important;
 }
 
 .page-content {
