--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -5,8 +5,8 @@
 <div class="container page-content">
     <h2>Want to get in touch?</h2>
     <div class="row">
-        <div class="col-md-9">
-            <form method="post" class="mt-3">
+        <div class="col-md-6">
+            <form method="post" class="mt-3 form-control form-container">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit" class="btn btn-secondary">Submit Message</button>
