--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="container page-content">
-    <div class="row justify-content-center">
-        <div class="col-md-7 text-center">
+    <div class="row justify-content-center text-center">
+        <div class="col-md-7" id="home">
             <p class="display-3">Hello!&#128075;</p>
             <img src="{% static 'images/me.jpeg' %}" alt="" style="padding-bottom: 25px;">
             <p class="display-6">I'm <strong>Kieran</strong></p>
@@ -25,10 +25,25 @@
                     </ul>
                 </div>
             </div>
-            <div>
-                <p>Check out my projects <a href="#" class="links">here</a>!</p>
-            </div>
         </div>
+
+        <!-- About Me -->
+
+        <!-- Projects -->
+
+        <!-- Contact -->
+         <div class="col-m6-7" id="contact">
+            <h2>Want to get in touch?</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <form method="post" class="mt-3 form-control form-container">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-secondary">Submit Message</button>
+                    </form>
+                </div>
+            </div>
+         </div>
     </div>
 </div>
 {% endblock %}
