--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,6 +5,7 @@ html, body {
     color: #fafafa;
     background-color: #212529;
     overflow-x: hidden;
+    scroll-behavior: smooth !important;
 }
 
 img {
