--- a/templates/base.html
+++ b/templates/base.html
@@ -30,16 +30,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'projects' %}" class="nav-link">My Projects</a>
+                        <a href="#projects" class="nav-link">My Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'contact' %}" class="nav-link">Contact Me</a>
+                        <a href="#contact" class="nav-link">Contact Me</a>
                     </li>
                 </ul>
             </div>
