--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container page-content">
     <div class="row justify-content-center text-center">
-        <div class="col-md-7" id="home">
+        <div class="col-md-6" id="home">
             <p class="display-3">Hello!&#128075;</p>
             <img src="{% static 'images/me.jpeg' %}" alt="" style="padding-bottom: 25px;">
             <p class="display-6">I'm <strong>Kieran</strong></p>
@@ -32,10 +32,9 @@
         <!-- Projects -->
 
         <!-- Contact -->
-         <div class="col-m6-7" id="contact">
-            <h2>Want to get in touch?</h2>
-            <div class="row">
+            <div class="row justify-content-center text-center mt-3" id="contact">
                 <div class="col-md-6">
+                    <h2>Want to get in touch?</h2>
                     <form method="post" class="mt-3 form-control form-container">
                         {% csrf_token %}
                         {{ form.as_p }}
