--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -34,7 +34,7 @@
         <!-- Contact -->
             <div class="row justify-content-center text-center mt-3" id="contact">
                 <div class="col-md-6">
-                    <h2>Want to get in touch?</h2>
+                    <h2>Want to get in touch? &#128172;</h2>
                     <form method="post" class="mt-3 form-control form-container">
                         {% csrf_token %}
                         {{ form.as_p }}
