--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
             </button>
             <!-- Navbar menu that collapses on smaller screens -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0 justify-content-center text-center">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
