Feat: Add Favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,13 @@
     <script src="https://kit.fontawesome.com/1109df0b76.js" crossorigin="anonymous"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <title>Kieran Chambers | Full Stack Developer</title>
+    <title>Kieran Chambers | Web Developer</title>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_io/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon_io/favicon.ico' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_io/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_io/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'favicon_io/site.webmanifest' %}"> 
 </head>
 <body>
     <nav class="navbar navbar-expand-md fixed-top">
