--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,47 +2,64 @@
 {% load static %}
 
 {% block content %}
-<div class="container page-content">
+<div class="container page-content" id="home">
     <div class="row justify-content-center text-center">
-        <div class="col-md-6" id="home">
+        <div class="col-md-6">
             <p class="display-3">Hello!&#128075;</p>
             <img src="{% static 'images/me.jpeg' %}" alt="" style="padding-bottom: 25px;">
             <p class="display-6">I'm <strong>Kieran</strong></p>
+        </div>
+    </div>
+
+    <!-- About Me -->
+    <div class="row justify-content-center text-center mt-3">
+        <div class="col-md-4" id="about">
             <p>A <strong>Full Stack Developer</strong> skilled in:</p>
             <div class="row">
                 <div class="col">
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JS/jQuery</li>
+                        <li class="list-item">HTML</li>
+                        <li class="list-item">CSS</li>
+                        <li class="list-item">JS/jQuery</li>
                     </ul>
                 </div>
                 <div class="col">
                     <ul>
-                        <li>Python</li>
-                        <li>Django</li>
-                        <li>Bootstrap</li>
+                        <li class="list-item">Python</li>
+                        <li class="list-item">Django</li>
+                        <li class="list-item">Bootstrap</li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <!-- About Me -->
-
         <!-- Projects -->
-
-        <!-- Contact -->
-            <div class="row justify-content-center text-center mt-3" id="contact">
-                <div class="col-md-6">
-                    <h2>Want to get in touch? &#128172;</h2>
-                    <form method="post" class="mt-3 form-control form-container">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-secondary">Submit Message</button>
-                    </form>
+        <div class="row justify-content-center text-center mt-3">
+            <div class="col" id="projects">
+                <p class="display-6">Take a look at what I've made &#x1F50E;</p>
+                <div class="row">
+                    <div class="col">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                 </div>
             </div>
-         </div>
+        </div>
+        <!-- Contact -->
+        <div class="row justify-content-center text-center mt-3" id="contact">
+            <div class="col-md-6">
+                <p class="display-6">Want to get in touch? &#128172;</p>
+                <form method="post" class="mt-3 form-container">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-secondary" id="submit-button">Submit Message</button>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
-{% endblock %}
+
+    {% endblock %}
