--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center text-center">
         <div class="col-md-6">
             <p class="display-3">Hello!&#128075;</p>
-            <img src="{% static 'images/me.jpeg' %}" alt="" style="padding-bottom: 25px;">
+            <img id="profile-photo" src="{% static 'images/me.jpeg' %}" alt="" style="padding-bottom: 25px;">
             <p class="display-6">I'm <strong>Kieran</strong></p>
         </div>
     </div>
@@ -39,11 +39,24 @@
                 <p class="display-6">Take a look at what I've made &#x1F50E;</p>
                 <div class="row">
                     <div class="col">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class="card bg-dark">
+                            <img class="card-img-top" id="portfolio-image" src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
+                            <div class="card-body">
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                        <div class="card bg-dark">
+                            <img class="card-img-top" src="..." alt="Card image cap">
+                        </div>
+                        <div class="card bg-dark">
+                            <img class="card-img-top" src="..." alt="Card image cap">
+                        </div>
+                        <div class="card bg-dark">
+                            <img class="card-img-top" src="..." alt="Card image cap">
+                        </div>
+                        <div class="card bg-dark">
+                            <img class="card-img-top" src="..." alt="Card image cap">
+                        </div>
                     </div>
                 </div>
             </div>
