Feat: Style Portfolio project section styling with HTML and CSS

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -39,23 +39,23 @@
                 <p class="display-6">Take a look at what I've made &#x1F50E;</p>
                 <div class="row">
                     <div class="col">
-                        <div class="card bg-dark">
-                            <img class="card-img-top" id="portfolio-image" src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
+                        <div class="card bg-dark portfolio-card">
+                            <img class="card-img-top portfolio-image" src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
                             <div class="card-body">
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
                         </div>
-                        <div class="card bg-dark">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card bg-dark portfolio-card">
+                            <img class="card-img-top portfolio-image" src="{% static 'images/recipeme-screencap.png' %}" alt="RecipeMe Screen Capture" style="justify-self: flex-end;">
                         </div>
                         <div class="card bg-dark">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                            <img class="card-img-top portfolio-image" src="{% static 'images/todolist-screencap.png' %}" alt="To Do List Screen Capture">
                         </div>
-                        <div class="card bg-dark">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card bg-dark portfolio-card">
+                            <img class="card-img-top portfolio-image" src="{% static 'images/quizzit-screencap.png' %}" alt="Card image cap" style="justify-self: flex-end;">
                         </div>
-                        <div class="card bg-dark">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card bg-dark portfolio-card">
+                            <img class="card-img-top portfolio-image" src="{% static 'images/vinvivant-screencap.png' %}" alt="Card image cap">
                         </div>
                     </div>
                 </div>
