--- a/static/css/base.css
+++ b/static/css/base.css
@@ -116,6 +116,15 @@ a:hover {
     border-radius: 50%;
 }
 
+#projects {
+    display: inline-grid;
+}
+
+.portfolio-card {
+    display: inline-grid;
+}
+
+
 @media (max-width: 767px) {
   .navbar-collapse > ul > li > a {
     font-size: larger;
@@ -123,9 +132,10 @@ a:hover {
 }
 
 @media (min-width: 1200px) {
-    #portfolio-image {
-        max-height: 50%;
-        max-width: 50%;
+    .portfolio-image {
+        width: 50%; /* Fixed width */
+        height: 100%; /* Fixed height */
+        object-fit: cover; /* Cover the area without stretching */
         border-radius: 100%;
         position: relative;
         -moz-transition: all 1s ease;
@@ -134,7 +144,7 @@ a:hover {
         transition: all 1s ease;
     }
     
-    #portfolio-image:hover {
+    .portfolio-image:hover {
         border-radius: 3%; /* Remove the border-radius on hover */
         z-index: 9999;  /* Bring image to the front on hover */
         transform: scale(1.25);
