--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -9,12 +9,6 @@ body {
   scroll-behavior: smooth !important;
 }
 
-img {
-  max-height: 75%;
-  max-width: 75%;
-  border-radius: 50%;
-}
-
 ul {
   list-style-type: none;
 }
@@ -108,7 +102,7 @@ a:hover {
 }
 
 .card {
-    border: 1px solid #fafafa
+    border: none;
 }
 
 #submit-button {
@@ -116,8 +110,44 @@ a:hover {
   align-self: center;
 }
 
+#profile-photo {
+    max-height: 75%;
+    max-width: 75%;
+    border-radius: 50%;
+}
+
+#projects {
+    display: inline-grid;
+}
+
+.portfolio-card {
+    display: inline-grid;
+}
+
+
 @media (max-width: 767px) {
   .navbar-collapse > ul > li > a {
     font-size: larger;
   }
+}
+
+@media (min-width: 1200px) {
+    .portfolio-image {
+        width: 50%; /* Fixed width */
+        height: 100%; /* Fixed height */
+        object-fit: cover; /* Cover the area without stretching */
+        border-radius: 100%;
+        position: relative;
+        -moz-transition: all 1s ease;
+        -o-transition: all 1s ease;
+        -webkit-transition: all 1s ease;
+        transition: all 1s ease;
+    }
+    
+    .portfolio-image:hover {
+        border-radius: 3%; /* Remove the border-radius on hover */
+        z-index: 9999;  /* Bring image to the front on hover */
+        transform: scale(1.25);
+        display: block;
+    }
 }
