--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -12,8 +12,8 @@
     </div>
 
     <!-- About Me -->
-    <div class="row justify-content-center text-center mt-3">
-        <div class="col-md-4" id="about">
+    <div class="row justify-content-center text-center mt-3" id="about">
+        <div class="col-md-4">
             <p>A <strong>Full Stack Developer</strong> skilled in:</p>
             <div class="row">
                 <div class="col">
@@ -34,28 +34,51 @@
         </div>
 
         <!-- Projects -->
-        <div class="row justify-content-center text-center mt-3">
-            <div class="col" id="projects">
+        <div class="row justify-content-center text-center mt-3" id="projects">
+            <div class="col">
                 <p class="display-6">Take a look at what I've made &#x1F50E;</p>
                 <div class="row">
                     <div class="col">
+                        <!-- Portfolio Card 1 -->
                         <div class="card bg-dark portfolio-card">
-                            <img class="card-img-top portfolio-image" src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
-                            <div class="card-body">
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <div class="card-content d-flex">
+                                <img class="card-img-top portfolio-image"
+                                    src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
+                                <div class="card-body">
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                </div>
                             </div>
                         </div>
+                        <!-- Portfolio Card 2 -->
                         <div class="card bg-dark portfolio-card">
-                            <img class="card-img-top portfolio-image" src="{% static 'images/recipeme-screencap.png' %}" alt="RecipeMe Screen Capture" style="justify-self: flex-end;">
+                            <div class="card-content d-flex flex-row-reverse">
+                                <img class="card-img-top portfolio-image"
+                                    src="{% static 'images/recipeme-screencap.png' %}" alt="RecipeMe Screen Capture"
+                                    style="justify-self: flex-end;">
+                            </div>
                         </div>
-                        <div class="card bg-dark">
-                            <img class="card-img-top portfolio-image" src="{% static 'images/todolist-screencap.png' %}" alt="To Do List Screen Capture">
-                        </div>
+                        <!-- Portfolio Card 3 -->
                         <div class="card bg-dark portfolio-card">
-                            <img class="card-img-top portfolio-image" src="{% static 'images/quizzit-screencap.png' %}" alt="Card image cap" style="justify-self: flex-end;">
+                            <div class="card-content d-flex">
+                                <img class="card-img-top portfolio-image"
+                                    src="{% static 'images/todolist-screencap.png' %}" alt="To Do List Screen Capture">
+                            </div>
                         </div>
+                        <!-- Portfolio Card 4 -->
                         <div class="card bg-dark portfolio-card">
-                            <img class="card-img-top portfolio-image" src="{% static 'images/vinvivant-screencap.png' %}" alt="Card image cap">
+                            <div class="card-content d-flex flex-row-reverse">
+                                <img class="card-img-top portfolio-image"
+                                    src="{% static 'images/quizzit-screencap.png' %}" alt="Card image cap"
+                                    style="justify-self: flex-end;">
+                            </div>
+                        </div>
+                        <!-- Portfolio Card 5 -->
+                        <div class="card bg-dark portfolio-card">
+                            <div class="card-content d-flex">
+                                <img class="card-img-top portfolio-image"
+                                    src="{% static 'images/vinvivant-screencap.png' %}" alt="Card image cap">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -64,7 +87,7 @@
         <!-- Contact -->
         <div class="row justify-content-center text-center mt-3" id="contact">
             <div class="col-md-6">
-                <p class="display-6">Want to get in touch? &#128172;</p>
+                <p class="display-6">Send me a message! &#128172;</p>
                 <form method="post" class="mt-3 form-container">
                     {% csrf_token %}
                     {{ form.as_p }}
@@ -75,4 +98,4 @@
     </div>
 </div>
 
-    {% endblock %}
+{% endblock %}
