Feat: Add content to Projects section

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -45,8 +45,8 @@
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
                                 <div class="card-body">
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.</p>
+                                    <p class="h4">GlouGlou Natural Wine Store</p>
+                                    <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
                                 </div>
                             </div>
                         </div>
@@ -56,6 +56,10 @@
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/recipeme-screencap.png' %}" alt="RecipeMe Screen Capture"
                                     style="justify-self: flex-end;">
+                                    <div class="card-body">
+                                        <p class="h4">RecipeMe: Recipe Sharing App</p>
+                                        <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
+                                    </div>
                             </div>
                         </div>
                         <!-- Portfolio Card 3 -->
@@ -63,6 +67,10 @@
                             <div class="card-content d-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/todolist-screencap.png' %}" alt="To Do List Screen Capture">
+                                    <div class="card-body">
+                                        <p class="h4">To Do List</p>
+                                        <p class="h6"><em>Python, Google Sheets API</em></p>
+                                    </div>
                             </div>
                         </div>
                         <!-- Portfolio Card 4 -->
@@ -71,6 +79,10 @@
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/quizzit-screencap.png' %}" alt="Card image cap"
                                     style="justify-self: flex-end;">
+                                    <div class="card-body">
+                                        <p class="h4">Quizzit</p>
+                                        <p class="h6"><em>JavaScript, HTML, CSS</em></p>
+                                    </div>
                             </div>
                         </div>
                         <!-- Portfolio Card 5 -->
@@ -78,6 +90,10 @@
                             <div class="card-content d-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/vinvivant-screencap.png' %}" alt="Card image cap">
+                                    <div class="card-body">
+                                        <p class="h4">VinVivant Blog</p>
+                                        <p class="h6"><em>HTML, CSS, GitHub Pages</em></p>
+                                    </div>
                             </div>
                         </div>
                     </div>
