Feat: Improve styling and layout

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -13,7 +13,7 @@
 
     <!-- About Me -->
     <div class="row justify-content-center text-center mt-3" id="about">
-        <div class="col-md-4">
+        <div class="col-md-7">
             <p>A <strong>Full Stack Developer</strong> skilled in:</p>
             <div class="row">
                 <div class="col">
@@ -30,6 +30,13 @@
                         <li class="list-item">Bootstrap</li>
                     </ul>
                 </div>
+                <p>I have a strong foundation in front-end and back-end development, with expertise in frameworks such
+                    as Bootstrap and Django, as well as databases like PostgreSQL. I enjoy solving complex problems and
+                    take a proactive approach to learning new technologies.</p>
+
+                <a href="https://www.linkedin.com/in/kieranchamberskc/" style="font-size: larger;">Connect with me on LinkedIn</a>
+                <a href="#contact" style="font-size: larger;">Send me a message</a>
+
             </div>
         </div>
 
@@ -41,7 +48,7 @@
                     <div class="col">
                         <!-- Portfolio Card 1 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-flex">
+                            <div class="card-content d-md-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
                                 <div class="card-body">
@@ -52,48 +59,48 @@
                         </div>
                         <!-- Portfolio Card 2 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-flex flex-row-reverse">
+                            <div class="card-content d-md-flex flex-row-reverse">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/recipeme-screencap.png' %}" alt="RecipeMe Screen Capture"
                                     style="justify-self: flex-end;">
-                                    <div class="card-body">
-                                        <p class="h4">RecipeMe: Recipe Sharing App</p>
-                                        <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
-                                    </div>
+                                <div class="card-body">
+                                    <p class="h4">RecipeMe: Recipe Sharing App</p>
+                                    <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
+                                </div>
                             </div>
                         </div>
                         <!-- Portfolio Card 3 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-flex">
+                            <div class="card-content d-md-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/todolist-screencap.png' %}" alt="To Do List Screen Capture">
-                                    <div class="card-body">
-                                        <p class="h4">To Do List</p>
-                                        <p class="h6"><em>Python, Google Sheets API</em></p>
-                                    </div>
+                                <div class="card-body">
+                                    <p class="h4">To Do List</p>
+                                    <p class="h6"><em>Python, Google Sheets API</em></p>
+                                </div>
                             </div>
                         </div>
                         <!-- Portfolio Card 4 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-flex flex-row-reverse">
+                            <div class="card-content d-md-flex flex-row-reverse">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/quizzit-screencap.png' %}" alt="Card image cap"
                                     style="justify-self: flex-end;">
-                                    <div class="card-body">
-                                        <p class="h4">Quizzit</p>
-                                        <p class="h6"><em>JavaScript, HTML, CSS</em></p>
-                                    </div>
+                                <div class="card-body">
+                                    <p class="h4">Quizzit</p>
+                                    <p class="h6"><em>JavaScript, HTML, CSS</em></p>
+                                </div>
                             </div>
                         </div>
                         <!-- Portfolio Card 5 -->
                         <div class="card bg-dark portfolio-card">
-                            <div class="card-content d-flex">
+                            <div class="card-content d-md-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/vinvivant-screencap.png' %}" alt="Card image cap">
-                                    <div class="card-body">
-                                        <p class="h4">VinVivant Blog</p>
-                                        <p class="h6"><em>HTML, CSS, GitHub Pages</em></p>
-                                    </div>
+                                <div class="card-body">
+                                    <p class="h4">VinVivant Blog</p>
+                                    <p class="h6"><em>HTML, CSS, GitHub Pages</em></p>
+                                </div>
                             </div>
                         </div>
                     </div>
