--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-md fixed-top">
         <div class="container-fluid">
             <div>
-                <h3 class="text-light">Kieran Chambers</h3>
+                <h1 class="text-light display-5">Kieran Chambers</h1>
                 <p class="text-light">Full Stack Developer</p>
             </div>
             <!-- Toggler Button for Mobile View -->
