Fix: Change display of 'Projects' ID back to inline-grid

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -51,6 +51,7 @@
                             <div class="card-content d-md-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/glouglou-screencap.png' %}" alt="GlouGlou Screen Capture">
+                                    <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">GlouGlou Natural Wine Store</p>
                                     <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
