Feat: Add overlay to dim background when image is hovered over

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -64,6 +64,7 @@
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/recipeme-screencap.png' %}" alt="RecipeMe Screen Capture"
                                     style="justify-self: flex-end;">
+                                    <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">RecipeMe: Recipe Sharing App</p>
                                     <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
@@ -75,6 +76,7 @@
                             <div class="card-content d-md-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/todolist-screencap.png' %}" alt="To Do List Screen Capture">
+                                    <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">To Do List</p>
                                     <p class="h6"><em>Python, Google Sheets API</em></p>
@@ -87,6 +89,7 @@
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/quizzit-screencap.png' %}" alt="Card image cap"
                                     style="justify-self: flex-end;">
+                                    <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">Quizzit</p>
                                     <p class="h6"><em>JavaScript, HTML, CSS</em></p>
@@ -98,6 +101,7 @@
                             <div class="card-content d-md-flex">
                                 <img class="card-img-top portfolio-image"
                                     src="{% static 'images/vinvivant-screencap.png' %}" alt="Card image cap">
+                                    <div class="overlay"></div>
                                 <div class="card-body">
                                     <p class="h4">VinVivant Blog</p>
                                     <p class="h6"><em>HTML, CSS, GitHub Pages</em></p>
