Feat: Add links to projects and project repos

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center text-center">
         <div class="col-md-6">
             <p class="display-3">Hello!&#128075;</p>
-            <img id="profile-photo" src="{% static 'images/me.jpeg' %}" alt="" style="padding-bottom: 25px;">
+            <img id="profile-photo" src="{% static 'images/me.jpeg' %}" alt="A photo of me" style="padding-bottom: 25px;">
             <p class="display-6">I'm <strong>Kieran</strong></p>
         </div>
     </div>
@@ -55,6 +55,8 @@
                                 <div class="card-body">
                                     <p class="h4">GlouGlou Natural Wine Store</p>
                                     <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
+                                    <a href="https://github.com/klchambers/pp5ecommerce" style="font-size: larger;">GitHub Repository</a><br>
+                                    <a href="https://pp5ecommerce-a72d5065ca06.herokuapp.com/" style="font-size: larger;">Live Site</a>
                                 </div>
                             </div>
                         </div>
@@ -68,6 +70,8 @@
                                 <div class="card-body">
                                     <p class="h4">RecipeMe: Recipe Sharing App</p>
                                     <p class="h6"><em>Django, Bootstrap, Cloudinary, Heroku</em></p>
+                                    <a href="https://github.com/klchambers/pp4" style="font-size: larger;">GitHub Repository</a><br>
+                                    <a href="https://pp4assignment-81282f23e92d.herokuapp.com/" style="font-size: larger;">Live Site</a>
                                 </div>
                             </div>
                         </div>
@@ -80,6 +84,8 @@
                                 <div class="card-body">
                                     <p class="h4">To Do List</p>
                                     <p class="h6"><em>Python, Google Sheets API</em></p>
+                                    <a href="https://github.com/klchambers/todo-list" style="font-size: larger;">GitHub Repository</a><br>
+                                    <a href="https://pp3todoapp-ab2e466bceb0.herokuapp.com/" style="font-size: larger;">Live Site</a>
                                 </div>
                             </div>
                         </div>
@@ -93,6 +99,8 @@
                                 <div class="card-body">
                                     <p class="h4">Quizzit</p>
                                     <p class="h6"><em>JavaScript, HTML, CSS</em></p>
+                                    <a href="https://github.com/klchambers/quiz-app" style="font-size: larger;">GitHub Repository</a><br>
+                                    <a href="https://klchambers.github.io/quiz-app/" style="font-size: larger;">Live Site</a>
                                 </div>
                             </div>
                         </div>
@@ -105,6 +113,8 @@
                                 <div class="card-body">
                                     <p class="h4">VinVivant Blog</p>
                                     <p class="h6"><em>HTML, CSS, GitHub Pages</em></p>
+                                    <a href="https://github.com/klchambers/VinVivant" style="font-size: larger;">GitHub Repository</a><br>
+                                    <a href="https://klchambers.github.io/VinVivant/" style="font-size: larger;">Live Site</a>
                                 </div>
                             </div>
                         </div>
