--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center text-center">
         <div class="col-md-6">
             <p class="display-3">Hello!&#128075;</p>
-            <img id="profile-photo" src="{% static 'images/me.jpeg' %}" alt="A photo of me" style="padding-bottom: 25px;">
+            <img id="profile-photo" src="{% static '/images/me.jpeg' %}" alt="A photo of me" style="padding-bottom: 25px;">
             <p class="display-6">I'm <strong>Kieran</strong></p>
         </div>
     </div>
