--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -51,7 +51,7 @@ a:hover {
 }
 
 .page-content {
-  padding-top: 100px;
+  padding-top: 120px;
 }
 
 .navbar {
@@ -102,7 +102,11 @@ a:hover {
 }
 
 .card {
-    border: none;
+  border: none;
+}
+
+.portfolio-card {
+  margin-top: 25px;
 }
 
 #submit-button {
@@ -111,43 +115,70 @@ a:hover {
 }
 
 #profile-photo {
-    max-height: 75%;
-    max-width: 75%;
-    border-radius: 50%;
+  max-height: 75%;
+  max-width: 75%;
+  border-radius: 50%;
 }
 
 #projects {
-    display: inline-grid;
+  display: inline-grid;
 }
-
-.portfolio-card {
-    display: inline-grid;
-}
-
 
 @media (max-width: 767px) {
-  .navbar-collapse > ul > li > a {
-    font-size: larger;
+  /* Projects section */
+  .portfolio-image {
+    width: 95%; /* Image takes more space on smaller screens */
+    margin-bottom: 15px; /* Add some space between image and text */
+  }
+
+  .card-text {
+    text-align: center;
+  }
+  /* Form */
+  .form-container {
+    display: flex;
+    flex-direction: column;
   }
 }
 
 @media (min-width: 1200px) {
-    .portfolio-image {
-        width: 50%; /* Fixed width */
-        height: 100%; /* Fixed height */
-        object-fit: cover; /* Cover the area without stretching */
-        border-radius: 100%;
-        position: relative;
-        -moz-transition: all 1s ease;
-        -o-transition: all 1s ease;
-        -webkit-transition: all 1s ease;
-        transition: all 1s ease;
-    }
-    
-    .portfolio-image:hover {
-        border-radius: 3%; /* Remove the border-radius on hover */
-        z-index: 9999;  /* Bring image to the front on hover */
-        transform: scale(1.25);
-        display: block;
-    }
+
+  .portfolio-card {
+    position: relative;
+  }
+  
+  .portfolio-image {
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 100%;
+    transition: all 1s ease; /* Keep transition for zoom */
+    margin-bottom: 30px;
+  }
+  
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in-out;
+    z-index: 998; /* Overlay above content but below the image */
+  }
+  
+  .portfolio-image:hover + .overlay {
+    opacity: 1;
+  }
+  
+  .portfolio-image:hover {
+    transform: scale(1.25); /* Zoom in */
+    border-radius: 3%; /* remove rounded corners */
+    z-index: 9999; /* Bring image to the front */
+  }
+  
+  
+  
 }
